# auto_agent

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
backend/: Dockerfile
backend/src/: llm.py  service.py  settings.py
backend/src/agents/: agents.py  chatbot.py
backend/src/core/: llm.py  settings.py
backend/src/schema/: models.py  schema.py
nginx/: nginx.conf
scenarios/inventory_management/app/: data.py  main.py
scenarios/inventory_management/app/models/: item.py  order.py
scenarios/inventory_management/app/routers/: items.py  orders.py
scenarios/shopping_history/app/: data.py  main.py
scenarios/shopping_history/app/models/: response.py  shopping_item.py  user.py
scenarios/shopping_history/app/routers/: frequent.py  history.py  summary.py  users.py
scenarios/smart_home/: Dockerfile
scenarios/smart_home/app/: data.py  main.py
scenarios/smart_home/app/models/: data.py  device.py  device_type.py  room.py
scenarios/smart_home/app/routers/: devices.py  rooms.py
src/: Dockerfile
src/app/: app.py  requirements.txt
src/app/config/: enums.py  registry.py
src/app/config/prompts/: inventory_management.py  shared.py  shopping_history.py  smart_home.py  web_browse.py
src/app/database/: config.py  sql_db.py  vector_db.py
src/app/genai/: llm.py
src/app/genai/agents/: agent_executor.py
src/app/genai/shared/: llm.py  prompts.py  tool_manager.py
src/app/genai/tools/: tool_manager.py
src/app/streamlit_app/: renders.py  schema.py  streamlit_app.py
(+20 files in other folders)
