[tool.poetry]
name = "auto-agent"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.11.5"
pydantic-settings = "^2.9.1"
fastapi = "^0.115.12"
langchain-openai = "^0.3.18"
langchain-community = "^0.3.24"
langgraph = "^0.4.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
